--- a/public/index.html
+++ b/public/index.html
@@ -10,32 +10,37 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            height: 100vh;
         }
         .container {
             max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
+            margin: 20px auto;
+            padding: 10px;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        h1 {
+        h2 {
             color: #5832a8;
             text-align: center;
         }
         .nav-buttons {
             text-align: center;
-            margin: 20px 0;
+            margin: 15px 0;
         }
         .nav-buttons button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 8px 15px;
+            font-size: 14px;
             background-color: #5832a8;
             color: white;
             border: none;
             cursor: pointer;
-            margin: 10px;
-            width: 150px;
+            margin: 7px;
+            width: 100px;
         }
         .nav-buttons button:hover {
             background-color: #472997;
@@ -46,11 +51,30 @@
             border: none;
             margin-top: 20px;
         }
+        .button {
+            background-color: #1DA1F2;
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            font-size: 14px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: #0c7abf;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Twitter User Data and Tweets</h1>
+
+        <h2>Welcome to Twitter OAuth</h1>
+        <p>This page is served as a static HTML page.</p>
+        <button class="button" id="twitter-auth-btn">Sign in with Twitter</button>
+
+        <div id="auth-status" style="margin-top: 20px;"></div>
+        <h2>Twitter User Data and Tweets</h1>
         <div class="nav-buttons">
             <a href="/user">
                 <button>User Data</button>
@@ -59,21 +83,14 @@
                 <button>Tweets</button>
             </a>
         </div>
-        <div class="nav-buttons">
-            <a href="/user">
-                <button>signin</button>
-            </a>
-            <a href="/tweets">
-                <button>sigin</button>
-            </a>
-        </div>
+    </div>
     </div>
     <script>
          document.getElementById('twitter-auth-btn').addEventListener('click', async () => {
             try {
                 const response = await fetch('/auth/twitter');
                 const result = await response.json();
-
+                console.log(result);
                 if (result.success && result.authUrl) {
                     window.location.href = result.authUrl;
                 } else {
